--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,6 @@ runs:
       with: 
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secretes.GITHUB_TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         image: rrp:latest
         run: echo $(ls)
